# Histo-Eval

./: .gitignore  README.md  agent.md  config.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  instruction.md  plan.md  prd.md  repo-metadata.json  tdd.md
.github/workflows/: update-repo-metadata.yml
data/beta/: origin_tmp.txt
doc/: research.md
src/: __init__.py
src/hpe/: __init__.py
src/hpe/data/: __init__.py  loader.py
src/hpe/pipelines/: __init__.py  pipeline_a.py  pipeline_b.py  pipeline_c.py  pipeline_d.py  pipeline_e.py  pipeline_e_sk.py  pipeline_f.py
tests/: VERIFY_PIPELINES.md  analyze_pipeline_d_intermediates.py  conftest.py  doc_tissue_mask.py  test_bootstrap_files.py  test_data_loader_csv.py  test_image_io.py  test_pipeline_a.py  test_pipeline_b.py  test_pipeline_c.py  test_pipeline_d.py  test_pipeline_e.py  test_pipeline_e_sk.py  test_pipeline_f.py  test_pipeline_interface.py  verify_pipeline_a.py  verify_pipeline_b.py  verify_pipeline_c.py  verify_pipeline_d.py  verify_pipeline_e.py  verify_pipeline_e_sk.py  verify_pipeline_f.py
tests/fixtures/: empty_values.csv  malformed.csv  missing_column.csv  test_pipeline.csv  test_pipeline_a.csv  test_pipeline_beta.csv  valid_pairs.csv
